--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -16,8 +16,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   max-width: 1920px;
   margin: 0 auto;
-  background-color: $background-main;
   font-family: $font-main;
+  color: $text-main;
+  background-color: $background-main;
   display: flex; //! temporarily
   flex-direction: column; //! temporarily
   justify-content: center; //! temporarily
@@ -32,4 +33,13 @@ h2 {
 
 p {
   margin: 0;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
