refactor: change utils

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -13,7 +13,8 @@ $mobile-M: 375px;
 $mobile-L: 425px;
 $tablet: 768px;
 $laptop: 1024px;
-$desktop: 1440px;
+$laptop-L: 1440px;
+$desktop: 1920px;
 
 // Effects
 $hover: 200ms;
