feat: add link-tel

--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -1,3 +1,11 @@
+@mixin font-medium($_fontSize, $_letterSpacing: normal, $_lineHeight: 1) {
+  font-size: $_fontSize;
+  letter-spacing: $_letterSpacing;
+  line-height: $_lineHeight;
+  font-style: normal;
+  font-weight: 500;
+}
+
 @mixin font-regular($_fontSize, $_letterSpacing: normal, $_lineHeight: 1) {
   font-size: $_fontSize;
   letter-spacing: $_letterSpacing;
