--- a/src/styles/fonts/index.scss
+++ b/src/styles/fonts/index.scss
@@ -1,5 +1,12 @@
 @font-face {
   font-family: 'Inter';
+  font-weight: 500;
+  font-style: normal;
+  src: url('styles/fonts/Inter-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter';
   font-weight: 400;
   font-style: normal;
   src: url('styles/fonts/Inter-Regular.woff2') format('woff2');
