refactor: add focus for filter-checkbox

--- a/src/styles/components/_filter-checkbox.scss
+++ b/src/styles/components/_filter-checkbox.scss
@@ -22,6 +22,10 @@
     background-color: $ui-secondary;
     transition: background-color $hover;
     cursor: pointer;
+    @include effect-focus-main;
+    &:focus-visible {
+      border-radius: 40px;
+    }
 
     &:checked {
       background-color: $ui-main;
