config: add prettier for pug

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,5 @@
-html 
+html
   head
   body
     div Привет Pug
-    script(src="./index.js" defer="defer")
+      script(src='./index.js', defer='defer')
