--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,8 @@
+doctype html
 html
   head
+    title Заголовок здесь
+    meta(charset='utf-8') 
   body
-    div Привет Pug
-      script(src='./index.js', defer='defer')
+    
+    script(src='./index.js', defer='defer') 
