--- a/src/index.pug
+++ b/src/index.pug
@@ -1,8 +1,11 @@
 doctype html
-html
+html(lang='ru')
   head
-    title Заголовок здесь
-    meta(charset='utf-8') 
+    meta(charset='UTF-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    title Краски
   body
-    
+    a.link-icon.link-icon_size_m
+      img.link-icon__image(src='./images/search-icon.svg', alt='Поиск')
+
     script(src='./index.js', defer='defer') 
