feat: add ui-icons

--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,9 @@ html(lang='ru')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Краски
   body
-    a.link-icon.link-icon_size_m
-      img.link-icon__image(src='./images/search-icon.svg', alt='Поиск')
+    .ui-icons
+      a.link-icon.link-icon_size_m.link-icon_bg_search Поиск
+      a.link-icon.link-icon_size_l.link-icon_bg_profile Профиль
+      a.link-icon.link-icon_size_l.link-icon_bg_like Избранное
 
     script(src='./index.js', defer='defer') 
