--- a/src/styles/components/_link-icon.scss
+++ b/src/styles/components/_link-icon.scss
@@ -1,18 +1,73 @@
 @use '../utils' as *;
 
 .link-icon {
-  display: inline-block;
+  position: relative;
+  font-size: 0;
+  cursor: pointer;
+  @include effect-hover-icon;
+
   &_size_m {
     width: 20px;
     height: 20px;
   }
+
   &_size_l {
     width: 22px;
     height: 22px;
   }
 
-  &__image {
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    object-fit: contain;
+    height: 100%;
+    content: '';
+    opacity: 1;
+  }
+
+  &:hover::before {
+    opacity: 0;
+  }
+
+  &::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    opacity: 0;
+  }
+
+  &:hover::after {
+    opacity: 1;
+  }
+
+  &_bg_search {
+    &::before {
+      background: url('./images/search-icon.svg') no-repeat center / contain;
+    }
+    &::after {
+      background: url('./images/search-icon-hover.svg') no-repeat center / contain;
+    }
+  }
+
+  &_bg_profile {
+    &::before {
+      background: url('./images/profile-icon.svg') no-repeat center / contain;
+    }
+    &::after {
+      background: url('./images/profile-icon-hover.svg') no-repeat center / contain;
+    }
+  }
+
+  &_bg_like {
+    &::before {
+      background: url('./images/like-icon.svg') no-repeat center / contain;
+    }
+    &::after {
+      background: url('./images/like-icon-hover.svg') no-repeat center / contain;
+    }
   }
 }
