--- a/src/ui/link-icon.pug
+++ b/src/ui/link-icon.pug
@@ -1,2 +1,1 @@
-a.link-icon.link-icon_size_m
-  img.link-icon__image(src='./images/search-icon.svg', alt='Поиск')
+a.link-icon.link-icon_size_m.link-icon_bg_search Поиск
