--- a/src/ui/link-icon.pug
+++ b/src/ui/link-icon.pug
@@ -1,1 +1,1 @@
-a.link-icon.link-icon_size_m.link-icon_bg_search Поиск
+a.link-icon.link-icon_size_s.link-icon_bg_search(tabindex='0', aria-label='Поиск') 
