--- a/src/ui/ui-icons.pug
+++ b/src/ui/ui-icons.pug
@@ -1,4 +1,9 @@
-.ui-icons
-  a.link-icon.link-icon_size_m.link-icon_bg_search Поиск
-  a.link-icon.link-icon_size_l.link-icon_bg_profile Профиль
-  a.link-icon.link-icon_size_l.link-icon_bg_like Избранное
+ul.ui-icons
+  li
+    a.link-icon.link-icon_size_s.link-icon_bg_search(tabindex='0', aria-label='Поиск') 
+  li
+    a.link-icon.link-icon_size_m.link-icon_bg_profile(tabindex='0', aria-label='Профиль') 
+  li
+    a.link-icon.link-icon_size_m.link-icon_bg_like(tabindex='0', aria-label='Избранное') 
+  li
+    a.link-basket(tabindex='0', aria-label='Корзина') 4
