feat: add breadcrumbs

--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -22,6 +22,7 @@ body {
   height: 100vh; //! temporarily
   margin: 0 auto;
   background-color: $background-main;
+  background-color: $ui-main;
   color: $text-main;
   font-family: $font-main;
 }
@@ -36,6 +37,8 @@ p {
 }
 
 ul {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
