--- a/src/styles/utils/_media.scss
+++ b/src/styles/utils/_media.scss
@@ -36,8 +36,8 @@
   }
 }
 
-@mixin desktop {
-  @media (width >= $laptop-L) {
+@mixin media-desktop {
+  @media (width >= $desktop) {
     @content;
   }
 }
