--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,6 +4,9 @@ $font-main: 'Inter', sans-serif;
 // Colors
 $background-main: #ffffff;
 $text-main: #1f2020;
+$text-hero: #ffffff;
+$breadcrumbs-mobile: #1f2020;
+$breadcrumbs-dekstop: #ffffff;
 $ui-main: #7bb899;
 $ui-secondary: #f2f2f2;
 
