--- a/src/styles/components/_link-basket.scss
+++ b/src/styles/components/_link-basket.scss
@@ -17,7 +17,7 @@
     opacity: 0.7;
   }
   &:focus-visible {
-    outline: 1px solid $text-main;
+    outline: 2px solid greenyellow;
     opacity: 0.7;
   }
 }
