feat: add products

--- a/src/index.pug
+++ b/src/index.pug
@@ -39,7 +39,7 @@ html(lang='ru')
         a.link-basket.header__link-basket(tabindex='0', aria-label='Корзина') 4
 
     main
-      .hero
+      section.hero
         ul.breadcrumbs.hero__breadcrumbs
           li.breadcrumbs__element
             a.breadcrumbs__link(href='#') Главная
@@ -72,5 +72,36 @@ html(lang='ru')
             .hero__slide
           swiper-slide
             .hero__slide
+
+      section.products
+        .filters.products__filters
+          .filter-checkbox
+            input#filterNew.filter-checkbox__input(type='checkbox', name='filterNew')
+            label.filter-checkbox__label(for='filterNew') Новинки
+          .filter-checkbox
+            input#filterStock.filter-checkbox__input(type='checkbox', name='filterStock')
+            label.filter-checkbox__label(for='filterStock') Есть в наличии
+          .filter-checkbox
+            input#filterContract.filter-checkbox__input(type='checkbox', name='filterContract')
+            label.filter-checkbox__label(for='filterContract') Контрактные
+          .filter-checkbox
+            input#filterExcluzive.filter-checkbox__input(type='checkbox', name='filterExcluzive')
+            label.filter-checkbox__label(for='filterExcluzive') Эксклюзивные
+          .filter-checkbox
+            input#filterSale.filter-checkbox__input(type='checkbox', name='filterSale')
+            label.filter-checkbox__label(for='filterSale') Распродажа
+        div
+          .products__buttons
+            button.button-filters.products__button-filters Фильтры
+            span.products__counter 412 товаров
+            button.button-sort
+              span.button-sort__text Сначала дорогие
+              span.button-sort__arrow
+          .products__cards
+            .card 1
+            .card 2
+            .card 3
+            .card 4
+            .card 5
 
   script(src='./index.js', defer='defer') 
