--- a/src/styles/global/_global.scss
+++ b/src/styles/global/_global.scss
@@ -15,7 +15,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 1920px;
-  min-height: 200vh; //!
+  // min-height: 200vh; //!
   margin: 0 auto;
   background-color: $background-main;
   color: $text-main;
