refactor: change adaptive for products

--- a/src/index.pug
+++ b/src/index.pug
@@ -90,7 +90,7 @@ html(lang='ru')
           .filter-checkbox
             input#filterSale.filter-checkbox__input(type='checkbox', name='filterSale')
             label.filter-checkbox__label(for='filterSale') Распродажа
-        div
+        .products__main
           .products__buttons
             button.button-filters.products__button-filters Фильтры
             span.products__counter 412 товаров
