--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -4,7 +4,7 @@
   width: 156px;
   height: 306px;
   background-color: $ui-main;
-  @include media-desktop {
+  @include media-laptop-L {
     width: 278px;
     height: 392px;
   }
