--- a/src/index.pug
+++ b/src/index.pug
@@ -98,10 +98,65 @@ html(lang='ru')
               span.button-sort__text Сначала дорогие
               span.button-sort__arrow
           .products__cards
-            .card 1
-            .card 2
-            .card 3
-            .card 4
-            .card 5
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
+            .card
+              img.card__image(src='./images/card-image.png', alt='Картинка')
+              p.card__description Краска Wallquest, Brownsone MS90102
+              .card__footer
+                span.card__price 4800
+                button.card__button
 
   script(src='./index.js', defer='defer') 
