--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,5 @@
 @use 'styles/global';
 @use 'styles/utils';
 @use 'styles/components';
+
+// Изменены размеры отступов между карточками, чтобы влезало по 5 штук.
