--- a/src/styles/components/_products.scss
+++ b/src/styles/components/_products.scss
@@ -4,21 +4,23 @@
   width: 100%;
   max-width: calc(100% - 48px);
   margin: 0 auto;
+  padding-bottom: 64px;
   @include media-tablet {
     display: flex;
     max-width: calc(100% - 128px);
     gap: 50px;
   }
   @include media-laptop-L {
+    padding-bottom: 141px;
     gap: 138px;
   }
 
   &__buttons {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 24px;
+    margin-bottom: 25px;
     @include media-laptop-L {
-      margin-bottom: 44px;
+      margin-bottom: 45px;
     }
   }
 
@@ -26,10 +28,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 59px 15px;
+    gap: 24px 15px;
     @include media-tablet {
       justify-content: start;
-      gap: 20px;
+      gap: 16px 20px;
     }
   }
 
@@ -57,5 +59,6 @@
 
   &__main {
     width: 100%;
+    margin-top: 2px;
   }
 }
