--- a/src/styles/fonts/index.scss
+++ b/src/styles/fonts/index.scss
@@ -1,13 +1,27 @@
 @font-face {
-  font-family: 'Inter';
-  font-weight: 500;
   font-style: normal;
-  src: url('styles/fonts/Inter-Medium.woff2') format('woff2');
+  font-weight: 600;
+  src: url('styles/fonts/Inter-SemiBold.woff2') format('woff2');
+  font-family: 'Inter';
 }
 
 @font-face {
-  font-family: 'Inter';
-  font-weight: 400;
   font-style: normal;
+  font-weight: 500;
+  src: url('styles/fonts/Inter-Medium.woff2') format('woff2');
+  font-family: 'Inter';
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
   src: url('styles/fonts/Inter-Regular.woff2') format('woff2');
+  font-family: 'Inter';
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 300;
+  src: url('styles/fonts/Inter-Light.woff2') format('woff2');
+  font-family: 'Inter';
 }
