--- a/src/styles/utils/_effects.scss
+++ b/src/styles/utils/_effects.scss
@@ -15,6 +15,14 @@
   }
 }
 
+@mixin effect-hover-button {
+  transition: background-color $hover;
+  user-select: none;
+  &:hover {
+    background-color: $ui-main;
+  }
+}
+
 @mixin effect-hover-icon {
   user-select: none;
   &::before {
