--- a/src/styles/components/_modal-sort.scss
+++ b/src/styles/components/_modal-sort.scss
@@ -1,34 +1,96 @@
 @use '../utils' as *;
 
 .modal-sort {
-  display: flex;
-  flex-direction: column;
-  min-width: 280px;
-  background-color: gold;
+  position: relative;
 
   &__button {
     display: flex;
+    gap: 4px;
+    border: none;
+    background-color: $background-main;
+    cursor: pointer;
+    @include effect-hover-main;
+    @include effect-focus-main;
+  }
+
+  &__button-text {
+    text-transform: uppercase;
+    @include font-medium(12px, 0.06em);
+  }
+
+  &__button-arrow {
+    width: 10px;
+    height: 10px;
+    background: url('./images/sort-arrow-icon.svg') no-repeat center / contain;
+  }
+
+  &__background {
+    visibility: hidden;
+    z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: 0.8);
+    opacity: 0;
+    transition:
+      visibility $hover,
+      opacity $hover linear;
+    &_opened {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  &__content {
+    visibility: hidden;
+    z-index: 2;
+    position: absolute;
+    top: -6px;
+    right: 10px;
+    opacity: 0;
+    transition:
+      visibility $hover,
+      opacity $hover linear;
+    &_opened {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  &__content-list {
+    display: flex;
+    flex-direction: column;
+    min-width: 280px;
+    padding-bottom: 12px;
+    gap: 2px;
+    background-color: $background-main;
+  }
+
+  &__content-button {
+    display: flex;
     align-items: center;
     width: 100%;
-    height: 47px;
+    height: 45px;
     padding: 0 24px;
     border: none;
     background-color: $background-main;
     text-transform: uppercase;
     cursor: pointer;
-    transition: background-color $hover;
     @include font-medium(12px, 0.06em);
     @include effect-hover-main;
     @include effect-focus-main;
+    &:focus-visible {
+      border-radius: 2px;
+      outline: 2px solid yellowgreen;
+    }
 
     &_active {
       background-color: $ui-main;
+      transition: none;
       &:hover {
         color: $text-main;
-      }
-      &:focus-visible {
-        border-radius: 2px;
-        outline: red 2px solid;
       }
     }
   }
